--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="请输入用户Id"
-        android:text="66"
+        android:inputType="number"
         android:textSize="14dp"
         app:layout_constraintBaseline_toBaselineOf="@id/userTitle"
         app:layout_constraintEnd_toEndOf="parent"
